# DataWhisperer

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: account.py  (+10 more)
docs/: architecture.md  interview-guide.md  product-data-model-v3.13.md  v1-release-notes.md  v2-promptops-design.md  v3-rag-metrics-design.md  v4-sql-of-thought-agents.md
evals/: metric_retrieval_cases.json  text_to_sql_cases.json  text_to_sql_upload_100_cases.jsonl
scripts/: init_product_schema.sql  mysql_sample.sql  upgrade_product_schema_v3_13_10.sql  upgrade_product_schema_v3_13_12.sql  upgrade_product_schema_v3_13_5_2.sql  upgrade_product_schema_v3_13_8.sql  upgrade_product_schema_v3_13_9.sql
static/: index.html
tests/: test_account_api.py  test_agent_model_router.py  test_api_contract.py  test_auth_api.py  test_chart_tool.py  test_chat_query_data_source.py  test_conversation_snapshots.py  test_conversations_api.py  test_dashscope_embedder.py  test_data_sources_api.py  test_evaluations_api.py  test_examples.py  test_file_store.py  test_hashing_embedder.py  test_metric_retrieval_evals.py  test_metric_retriever.py  test_milvus_metric_retriever.py  test_milvus_sync.py  test_model_settings_api.py  test_product_repositories.py  test_prompt_integration.py  test_prompt_registry.py  test_rag_document_indexer.py  test_rag_document_retriever.py  test_rag_files_api.py  test_schema_sync_api.py  test_security_policies_api.py  test_sql_of_thought_agents.py  test_sql_repair_flow.py  test_sql_safety.py  test_text_to_sql_evals.py
(+77 files in other folders)
